# calor_bot

./: .gitignore  README.md  list_tags.txt  pyproject.toml  readme.md  requirements.txt  test_calc.txt  update.sh  web.py
habr_bot/: create_bot.py  run.py
habr_bot/db_handler/: db_class.py
habr_bot/filters/: __init__.py
habr_bot/handlers/: __init__.py
habr_bot/keyboards/: __init__.py
habr_bot/middlewares/: __init__.py
src/: __main__.py
src/bot/: bot_core.py  cmd_torrents.py  commands.py  cut_tags.py  mock_data.py  test_lm_studio.py  torrents.py
src/fast_calc/: fast_calc.py  fast_calc_core.py  fast_calc_ui.py  item_data.py  item_ordering.py  settings_ordering.txt  test_calc.txt
templates/: index.html
utils/: __init__.py
