[project]
name = "calories-bot"
version = "0.1.0"
description = "Get food from telegram bot and put calories to DB"
authors = [
    {name = "Vladimir Sumenko",email = "3760097@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "db-handler (>=0.2.1,<0.3.0)",
    "fastapi (>=0.129.2,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]
[tool.poetry]
name = "calories-bot"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
]

